nav bar left buttons problem solved - blurred background

--- a/style/style1.css
+++ b/style/style1.css
@@ -6,10 +6,9 @@
 html,
 body {
     height: 100%;
-    background-image: url(../img/food_bg_1.jpg);
+    background: url(../img/food_bg_1.jpg) center center fixed;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center fixed;
 }
 
 .wrap_body {
@@ -23,9 +22,76 @@ body {
     background-color: #264653;
     display: flex;
     align-items: center;
-    position: sticky;
     top: 0;
     z-index: 1;
+}
+
+.nav_left {
+    display: flex;
+    width: 50%;
+}
+
+.nav_left hr {
+    border: solid 1px rgba(255, 255, 255, 0.1);
+}
+
+.logo {
+    width: 50px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    transition-duration: 0.2s;
+}
+
+.logo a img {
+    width: 100%;
+    transition-duration: 0.2s;
+}
+.logo img:hover {
+    transform: scale(1.3);
+}
+
+.buttons {
+    width: 100%;
+    display: flex;
+}
+.buttons a {
+    min-width: 20%;
+    max-width: 30%;
+    height: 100%;
+}
+
+.buttons a button {
+    width: 100%;
+    height: 100%;
+    background: #264653;
+    color: white;
+    font-size: 18px;
+    border: none;
+    transition: 0.3s;
+}
+
+.icohome {
+    max-height: 50px;
+    content: url(../img/icons/home.png);
+}
+
+.icoorder {
+    max-height: 40px;
+    content: url(../img/icons/ordernow.png);
+}
+
+.icoabout {
+    max-height: 50px;
+    content: url(../img/icons/aboutus.png);
+}
+
+.buttons a button:hover {
+    background: #356d83;
+}
+
+.buttons a button:hover span {
+    content: none;
 }
 .nav_right {
     width: 50%;
@@ -51,84 +117,6 @@ body {
 .nav_right button:hover span::after {
     content: " \00bb";
     transition-duration: 0.3s;
-}
-
-.nav_left {
-    display: flex;
-    width: 50%;
-}
-
-.nav_left button {
-    color: white;
-    height: 100%;
-    background: #264653;
-    width: 110px;
-    border: none;
-    font-size: 20px;
-    text-decoration: none;
-    transition-duration: 0.3s;
-}
-
-.nav_left button:hover {
-    background: #1c7792b9;
-    color: white;
-}
-
-.nav_left hr {
-    border: solid 1px rgba(255, 255, 255, 0.1);
-}
-
-.icohome {
-    content: url(../img/icons/home.png);
-    width: 50px;
-}
-
-.icoorder {
-    content: url(../img/icons/ordernow.png);
-    width: 50px;
-}
-
-.icoaboutus {
-    content: url(../img/icons/aboutus.png);
-    width: 50px;
-}
-
-.nav_left a button:hover span {
-    content: none;
-}
-
-/* .nav_left button {
-    background: #11c5fc;
-    width: 110px;
-    border: solid 2px #11c5fc;
-    margin: 5px;
-    padding: 10px;
-    font-size: 20px;
-    border-radius: 8px;
-    text-decoration: none;
-    transition-duration: 0.3s;
-}
-
-.nav_left button:hover {
-    background: #1c7792b9;
-    border: solid 2px white;
-    color: white;
-} */
-
-.logo {
-    margin: 10px;
-    margin-right: 40px;
-    display: flex;
-    align-items: center;
-    transition-duration: 0.2s;
-}
-
-.logo img {
-    width: 50px;
-    transition-duration: 0.2s;
-}
-.logo img:hover {
-    transform: scale(1.3);
 }
 
 .main {
